# ganttpy

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: example.ipynb
ganttpy/: __init__.py  gantt.py
